tests/expected_invalid_parse_phase_shape.diag.out
<input>:3:9: error: expected 'fields' in phase declaration
            positions {
            ^^^^^^^^^
<input>:12:5: error: expected 'positions' after fields
        }
        ^
